[gd_scene load_steps=21 format=3 uid="uid://bjaj8aln7f08r"]

[ext_resource type="Theme" uid="uid://jddhsc4auo55" path="res://addons/diisis/editor/visuals/amber_cherryblossom.tres" id="1_nb6ej"]
[ext_resource type="Script" path="res://addons/diisis/editor/src/editor.gd" id="1_r2t7d"]
[ext_resource type="PackedScene" uid="uid://bl3r0kwwycrmw" path="res://addons/diisis/editor/src/page.tscn" id="2_kbraj"]
[ext_resource type="Script" path="res://addons/diisis/editor/src/LineTypeButton.gd" id="3_2h0gj"]
[ext_resource type="Script" path="res://addons/diisis/editor/src/editor_popup_button.gd" id="3_u6k32"]
[ext_resource type="ButtonGroup" uid="uid://wl636ja43dky" path="res://addons/diisis/editor/src/line_type_button_group.tres" id="4_dg3k4"]
[ext_resource type="PackedScene" uid="uid://bxsq5rsj1i12f" path="res://addons/diisis/editor/src/go_to.tscn" id="4_m6c15"]
[ext_resource type="PackedScene" uid="uid://thtw7bxvvc4f" path="res://addons/diisis/editor/src/graphview/graph_view.tscn" id="5_bks01"]
[ext_resource type="PackedScene" uid="uid://cp0ob2ul8hv0n" path="res://addons/diisis/editor/src/header_popup.tscn" id="5_k116e"]
[ext_resource type="ButtonGroup" uid="uid://47f4hgcrt6xj" path="res://addons/diisis/editor/src/page_view_button_group.tres" id="6_5vieb"]
[ext_resource type="PackedScene" uid="uid://csyhxfuwxrtah" path="res://addons/diisis/editor/src/instruction_popup.tscn" id="6_m88mr"]
[ext_resource type="Script" path="res://addons/diisis/editor/src/page_view_button.gd" id="7_7syci"]
[ext_resource type="PackedScene" uid="uid://stb4ad3iost2" path="res://addons/diisis/editor/src/text_search_container.tscn" id="7_eshag"]
[ext_resource type="PackedScene" uid="uid://d4nhcwdgxbrlm" path="res://addons/diisis/editor/src/move_page_popup.tscn" id="7_w8mdv"]
[ext_resource type="PackedScene" uid="uid://c1kjr8wvf4qtt" path="res://addons/diisis/editor/src/facts_popup.tscn" id="8_3kqv2"]
[ext_resource type="PackedScene" uid="uid://buyg3m00l2a71" path="res://addons/diisis/editor/src/dropdowns_popup.tscn" id="9_i203b"]
[ext_resource type="PackedScene" uid="uid://dh7lwmyvues6e" path="res://addons/diisis/editor/src/word_count_dialog.tscn" id="12_icedl"]
[ext_resource type="PackedScene" uid="uid://cqaxdhdqxqyrw" path="res://addons/diisis/editor/src/text_search_popup.tscn" id="14_uw1uu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1frgx"]
bg_color = Color(0.984314, 0.882353, 0.960784, 0.254902)
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.847059, 0, 0.631373, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_bik72"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_1frgx")

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nb6ej")
script = ExtResource("1_r2t7d")

[node name="Core" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Core"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Core/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SavePathLabel" type="Label" parent="Core/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="FileControl" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "save"

[node name="OpenButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "open"

[node name="UndoButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Undo"

[node name="RedoButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Redo"

[node name="AutosaveAnnounceLabel" type="Label" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Autosave in: 0"

[node name="MenuBar" type="MenuBar" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="File" type="PopupMenu" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/MenuBar"]
item_count = 3
item_0/text = "Save"
item_1/text = "Save As..."
item_1/id = 1
item_2/text = "Open"
item_2/id = 2

[node name="Utility" type="PopupMenu" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/MenuBar"]
auto_translate_mode = 1
size = Vector2i(209, 100)
item_count = 2
item_0/text = "Word & Character Count"
item_1/text = "Search Text"
item_1/id = 1

[node name="Setup" type="PopupMenu" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/MenuBar"]
auto_translate_mode = 1
size = Vector2i(113, 197)
item_count = 7
item_0/text = "Edit"
item_0/separator = true
item_1/text = "Header"
item_1/id = 1
item_2/text = "Dropdowns"
item_2/id = 2
item_3/text = "Instructions"
item_3/id = 3
item_4/text = "View"
item_4/id = 4
item_4/separator = true
item_5/text = "Facts"
item_5/id = 5
item_6/text = "Pages"
item_6/id = 6

[node name="ErrorTextBox" type="RichTextLabel" parent="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="PageControl" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="PageNav" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl"]
layout_mode = 2

[node name="PanelContainer" type="MarginContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_bik72")

[node name="HBoxContainer" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer"]
layout_mode = 2

[node name="LastVisited" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "backward"

[node name="NextVisited" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "forward"

[node name="First" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "|<"

[node name="Prev" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "<"

[node name="GoTo" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer" instance=ExtResource("4_m6c15")]
layout_mode = 2

[node name="Next" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = ">"

[node name="Last" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = ">|"

[node name="JumpContainer" type="MarginContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer"]
layout_mode = 2

[node name="AddAfter" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add page after"
focus_mode = 0
text = "+>"

[node name="Positional" type="VBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer"]
layout_mode = 2

[node name="AddLast" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer/Positional"]
layout_mode = 2
tooltip_text = "Add page to end"
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "+>>"

[node name="DeleteCurrent" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer/Positional"]
layout_mode = 2
tooltip_text = "Delete current page"
focus_mode = 0
theme_override_font_sizes/font_size = 23
text = "-"

[node name="VSeparator" type="VSeparator" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav"]
layout_mode = 2

[node name="LineTypes" type="GridContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="TypeText" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer/LineTypes"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = ExtResource("4_dg3k4")
text = "Text"
script = ExtResource("3_2h0gj")

[node name="TypeChoice" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer/LineTypes"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_dg3k4")
text = "Choice"
script = ExtResource("3_2h0gj")
line_type = 1

[node name="TypeInstruction" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer/LineTypes"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_dg3k4")
text = "Instr"
script = ExtResource("3_2h0gj")
line_type = 2

[node name="TypeFolder" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer/LineTypes"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_dg3k4")
text = "Folder"
script = ExtResource("3_2h0gj")
line_type = 3

[node name="AddLineButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "add line"

[node name="VSeparator2" type="VSeparator" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav"]
auto_translate_mode = 1
layout_mode = 2

[node name="ViewTypes" type="HBoxContainer" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav"]
layout_mode = 2
size_flags_vertical = 0

[node name="ViewFullButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/ViewTypes"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = ExtResource("6_5vieb")
text = "Full"
script = ExtResource("7_7syci")

[node name="ViewTruncatedButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/ViewTypes"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("6_5vieb")
text = "Truncated"
script = ExtResource("7_7syci")
page_view = 1

[node name="ViewMinimalButton" type="Button" parent="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/ViewTypes"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = ExtResource("6_5vieb")
text = "Minimal"
script = ExtResource("7_7syci")
page_view = 2

[node name="MarginContainer2" type="MarginContainer" parent="Core/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Core/HBoxContainer2/MarginContainer2"]
visible = false
layout_mode = 2

[node name="EditHeaderButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "edit header"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../HeaderPopup")

[node name="EditCharactersButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "edit drop downs"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../DropdownPopup")

[node name="EditInstructionButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "edit instructions"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../InstructionPopup")

[node name="MovePagesButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "move pages"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../MovePagePopup")

[node name="HSeparator" type="HSeparator" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="EditFactsButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "view facts"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../FactsPopup")

[node name="WordCountButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "word & char count"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../WordCountDialog")

[node name="SearchTextButton" type="Button" parent="Core/HBoxContainer2/MarginContainer2/VBoxContainer" node_paths=PackedStringArray("popup")]
layout_mode = 2
focus_mode = 0
text = "Search Text"
alignment = 2
script = ExtResource("3_u6k32")
popup = NodePath("../../../../../TextSearchPopup")

[node name="PageContainer" type="MarginContainer" parent="Core"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Page" parent="Core/PageContainer" instance=ExtResource("2_kbraj")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Core"]
visible = false
layout_mode = 2

[node name="ToggleSearchButton" type="Button" parent="Core/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "search"

[node name="TextSearchContainer" parent="Core/VBoxContainer" instance=ExtResource("7_eshag")]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="GraphView" parent="." instance=ExtResource("5_bks01")]
visible = false
layout_mode = 1

[node name="FDSave" type="FileDialog" parent="."]
initial_position = 4
size = Vector2i(827, 377)
access = 2
filters = PackedStringArray("*.json")

[node name="FDOpen" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(312, 162)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="HeaderPopup" parent="." instance=ExtResource("5_k116e")]
title = "Edit Header Defaults"
visible = false
content_scale_aspect = 1

[node name="InstructionPopup" parent="." instance=ExtResource("6_m88mr")]
visible = false

[node name="MovePagePopup" parent="." instance=ExtResource("7_w8mdv")]
size = Vector2i(300, 270)
visible = false

[node name="FactsPopup" parent="." instance=ExtResource("8_3kqv2")]
visible = false

[node name="DropdownPopup" parent="." instance=ExtResource("9_i203b")]
visible = false

[node name="WordCountDialog" parent="." instance=ExtResource("12_icedl")]
visible = false

[node name="TextSearchPopup" parent="." instance=ExtResource("14_uw1uu")]
visible = false

[node name="AutoSaveTimer" type="Timer" parent="."]

[node name="InstructionDefinitionTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/HBoxContainer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/HBoxContainer/RedoButton" to="." method="_on_redo_button_pressed"]
[connection signal="index_pressed" from="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/MenuBar/File" to="." method="_on_file_index_pressed"]
[connection signal="index_pressed" from="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/MenuBar/Utility" to="." method="_on_utility_index_pressed"]
[connection signal="index_pressed" from="Core/HBoxContainer2/VBoxContainer/HBoxContainer/FileControl/MarginContainer/VBoxContainer/MenuBar/Setup" to="." method="_on_setup_index_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/LastVisited" to="." method="_on_last_visited_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/NextVisited" to="." method="_on_next_visited_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/First" to="." method="_on_first_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/Prev" to="." method="_on_prev_pressed"]
[connection signal="go_to" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/GoTo" to="." method="request_go_to_address"]
[connection signal="request_refresh" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/GoTo" to="." method="refresh"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/PanelContainer/HBoxContainer/Last" to="." method="_on_last_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer/AddAfter" to="." method="_on_add_after_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer/Positional/AddLast" to="." method="_on_add_last_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/JumpContainer/HBoxContainer/Positional/DeleteCurrent" to="." method="_on_delete_current_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/VBoxContainer/AddLineButton" to="." method="_on_add_line_button_pressed"]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/ViewTypes/ViewFullButton" to="." method="update_page_view" binds= [0]]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/ViewTypes/ViewTruncatedButton" to="." method="update_page_view" binds= [1]]
[connection signal="pressed" from="Core/HBoxContainer2/VBoxContainer/PageControl/PageNav/ViewTypes/ViewMinimalButton" to="." method="update_page_view" binds= [2]]
[connection signal="pressed" from="Core/VBoxContainer/ToggleSearchButton" to="." method="_on_toggle_search_button_pressed"]
[connection signal="file_selected" from="FDSave" to="." method="_on_fd_save_file_selected"]
[connection signal="file_selected" from="FDOpen" to="." method="_on_fd_open_file_selected"]
[connection signal="update" from="HeaderPopup" to="." method="_on_header_popup_update"]
[connection signal="validate_saved_instructions" from="InstructionPopup" to="." method="_on_instruction_popup_validate_saved_instructions"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_auto_save_timer_timeout"]
[connection signal="timeout" from="InstructionDefinitionTimer" to="." method="_on_instruction_definition_timer_timeout"]
